turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: not found: value colors
		case 'L' => gauche(); setCouleurBrosse(colors((i+1) % (colors.length)));
                                                       ^LangtonsAnt:24: error: not found: value colors
		case 'R' => droite(); setCouleurBrosse(colors((i+1) % (colors.length)));
                                                       ^